<resources>
    <string name="app_name">Order Food App</string>
    <string name="app_slogan">No matter where you are: whether you are at home, or in the office, or on the beach - we will find you and we will feed you.</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="app_logo">App Logo</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
</resources>
