<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/app_logo" />

        <TextView
            android:id="@+id/textSlogan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nabila"
            android:gravity="center"
            android:text="@string/app_slogan"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:text="@string/sign_up"
            style="@style/buttonSignUp"
            android:shadowColor="@android:color/black"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_height="56dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:text="@string/sign_in"
            style="@style/buttonSignIn"
            android:shadowColor="@android:color/black"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_height="56dp" />

    </LinearLayout>

</RelativeLayout>